Target Java 17 for 1.20.1